Repn nn for key and query

--- a/miscellaneous/RePN.ipynb
+++ b/miscellaneous/RePN.ipynb
@@ -3564,52 +3564,6 @@
     {
       "cell_type": "code",
       "source": [
-        "for epoch in range(num_epochs):\n",
-        "    optimizer.zero_grad()  # Zero the gradients\n",
-        "\n",
-        "\n",
-        "    outputs = model(x)\n",
-        "    mse_loss = nn.MSELoss()\n",
-        "\n",
-        "\n",
-        "\n",
-        "    loss = (outputs, targets)\n",
-        "\n",
-        "\n",
-        "    loss.backward()\n",
-        "\n",
-        "\n",
-        "    optimizer.step()\n",
-        "\n",
-        "\n",
-        "    print(f\"Epoch {epoch+1}, Loss: {loss.item()}\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 238
-        },
-        "id": "B3jDO-tlewXs",
-        "outputId": "4193f4ee-4ef5-4961-ce0f-4a026fd0b9f5"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-a8f5cf028984>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mmse_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMSELoss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "class query(nn.Module):\n",
         "    def __init__(self):\n",
         "        super().__init__()\n",
@@ -3658,35 +3612,6 @@
     {
       "cell_type": "code",
       "source": [
-        "for epoch in range(num_epochs):\n",
-        "    optimizer.zero_grad()  # Zero the gradients\n",
-        "\n",
-        "\n",
-        "    outputs = model(x)\n",
-        "    mse_loss = nn.MSELoss()\n",
-        "\n",
-        "\n",
-        "\n",
-        "    loss = (outputs, targets)\n",
-        "\n",
-        "\n",
-        "    loss.backward()\n",
-        "\n",
-        "\n",
-        "    optimizer.step()\n",
-        "\n",
-        "\n",
-        "    print(f\"Epoch {epoch+1}, Loss: {loss.item()}\")\n"
-      ],
-      "metadata": {
-        "id": "QG4G6zcMgeog"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "key_matrix=np.column_stack(x)\n",
         "query_matrix=np.column_stack(y)\n",
         "value=np.matmul(key_matrix,np.transpose(query_matrix))\n",
@@ -3715,6 +3640,35 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for epoch in range(num_epochs):\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "\n",
+        "\n",
+        "    mse_loss = nn.MSELoss()\n",
+        "\n",
+        "\n",
+        "\n",
+        "    loss = (output, targets)\n",
+        "\n",
+        "\n",
+        "    loss.backward()\n",
+        "\n",
+        "\n",
+        "    optimizer.step()\n",
+        "\n",
+        "\n",
+        "    print(f\"Epoch {epoch+1}, Loss: {loss.item()}\")\n"
+      ],
+      "metadata": {
+        "id": "QG4G6zcMgeog"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
